Fix broken CSS issue. Update resume link, upload new resume, and delete extraneous resumes.

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 html {
-  background-image: url("bg_bigsur.jpg");
+  background-image: url('bg_bigsur.jpg');
   background-size: cover !important;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -19,11 +19,11 @@ body {
 
 .text {
   font-size: 22px;
-  font
   text-decoration: none;
   text-align: center;
   position: relative;
   top: translateY(10%);
+  transform: translateY(10%);
   -webkit-transform: translateY(10%);
   opacity: 1;
   line-height: 175%;
@@ -47,8 +47,9 @@ body {
   margin-top: 20%;
 }
 
-.hexagon:before, .hexagon:after {
-  content: "";
+.hexagon:before,
+.hexagon:after {
+  content: '';
   position: absolute;
   width: 0;
   border-left: 200px solid transparent;
@@ -76,7 +77,7 @@ a:visited {
 }
 
 a:hover {
-  color: rgba(255,255, 255, 0.7);
+  color: rgba(255, 255, 255, 0.7);
   text-decoration: none;
 }
 
